Update Medicare AI with enhanced features and React compatibility
- Fix React version compatibility (downgrade to 18.2.0 with react-scripts 5.0.1)
- Add comprehensive medical disclaimers and liability protection
- Implement retry logic and better error handling with session tracking
- Expand medical database from 8 to 15+ conditions with detailed structure
- Add input sanitization and XSS prevention
- Fix audio autoplay policy compliance
- Update gitignore to exclude local development documentation

--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,12 @@ application-prod.properties
 # Logs
 *.log
 logs/
+
+# Keep .gitattributes local only
+.gitattributes
+
+# Local documentation and development files
+DEVELOPMENT_SETUP.md
+ENHANCEMENT_SUMMARY.md
+START_MANUAL.md
+start-dev.sh
