--- a/frontend/medicare-ui/package.json
+++ b/frontend/medicare-ui/package.json
@@ -3,23 +3,21 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/dom": "^10.4.0",
-    "@testing-library/jest-dom": "^6.6.3",
-    "@testing-library/react": "^16.3.0",
-    "@testing-library/user-event": "^13.5.0",
-    "devlop": "^1.1.0",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
+    "@testing-library/dom": "^9.3.0",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^14.4.3",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-markdown": "^8.0.7",
-    "react-scripts": "^4.0.3",
-    "react-speech-recognition": "^4.0.1",
+    "react-scripts": "5.0.1",
+    "react-speech-recognition": "^3.10.0",
     "remark-gfm": "^3.0.1",
-    "remark-parse": "^11.0.0",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^3.3.2"
   },
   "scripts": {
-    "start": "NODE_OPTIONS='--openssl-legacy-provider' react-scripts start",
-    "build": "NODE_OPTIONS='--openssl-legacy-provider' react-scripts build",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
     "test": "react-scripts test"
   },
   "eslintConfig": {
